# arbitration_graphs

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  docker-compose.devel.yaml  docker-compose.yaml  package.xml  version
.github/workflows/: build-and-push-docker.yaml  bump-version-and-create-release-and-push-docker-images.yaml  bump-version-and-create-release.yaml  compute_version.sh  run-unit-tests.yaml  test-publish-to-pypi.yaml
cmake/: cpack_config.cmake
demo/: .clang-tidy  .motd  CMakeLists.txt  Dockerfile  README.md  docker-compose.tutorial.yaml  docker-compose.yaml  main.cpp
demo/.devcontainer/: .bashrc  .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
demo/include/demo/: astar.hpp  avoid_ghost_behavior.hpp  change_dot_cluster_behavior.hpp  chase_ghost_behavior.hpp  cost_estimator.hpp  do_nothing_behavior.hpp  eat_closest_dot_behavior.hpp  environment_model.hpp  move_randomly_behavior.hpp  pacman_agent.hpp  pacman_arbitrator.hpp  pacman_wrapper.hpp  random_walk_behavior.hpp  run_away_from_ghost_behavior.hpp  stay_in_place_behavior.hpp  types.hpp  verifier.hpp
demo/include/utils/: astar.hpp  cluster.hpp  entities.hpp  maze.hpp  pacman_wrapper.hpp  type_adapter.hpp  utils.hpp  web_server.hpp  websocket_server.hpp
demo/src/: astar.cpp  avoid_ghost_behavior.cpp  change_dot_cluster_behavior.cpp  chase_ghost_behavior.cpp  cluster.cpp  cost_estimator.cpp  eat_closest_dot_behavior.cpp  entities.cpp  environment_model.cpp  main.cpp  move_randomly_behavior.cpp  pacman_wrapper.cpp  random_walk_behavior.cpp  run_away_from_ghost_behavior.cpp  stay_in_place_behavior.cpp  utils.cpp  websocket_server.cpp
demo/src/www/: index.html
demo/test/: CMakeLists.txt  astar.cpp  avoid_ghost_behavior.cpp  change_dot_cluster_behavior.cpp  chase_ghost_behavior.cpp  cluster.cpp  cost_estimator.cpp  do_nothing_behavior.cpp  dummy_behavior.hpp  maze.cpp  mock_environment_model.hpp  move_randomly_behavior.cpp  random_walk_behavior.cpp  run_away_from_ghost_behavior.cpp  stay_in_place_behavior.cpp  verifier.cpp
docs/: Tutorial.md  sitemap.xml
docs/_includes/: github-corner.html  head-custom.html
docs/_layouts/: default.html
docs/assets/_sass/: cayman-override.scss  colors-auto.scss  colors.scss  fonts.scss  github-corner.scss  toc.scss  variables.scss
docs/assets/css/: style.scss
docs/assets/js/: toc.js
docs/docker/: Dockerfile  Readme.md  docker-compose.yaml
docs/tasks/: 1_implement_behavior_component.md  2_extend_arbitration_graph.md  3_add_more_behaviors.md  3_nested_arbitrators.md  4_cost_arbitration.md  4_nested_arbitrators.md  5_cost_arbitration.md  5_verification.md  6_verification.md
gui/: CMakeLists.txt  README.md
gui/app/arbitration_graphs/: arbitrator_option.js  example_nested.yaml  example_nested_mixed_costs.yaml  icons.js  index.html  index.js  svg_filters.xml
gui/assets/: normalizedUtility.ggb
gui/htmlroot/: arbitrator_option.js  example.yaml  example_nested_negative_costs.yaml  icons.js  index.css  index.html  index.js  inline_style.js  ros.js  svg.css
gui/include/arbitration_graphs/gui/: crow_config.hpp.in  web_server.hpp  websocket_server.hpp
gui/scripts/: run_python_webserver.sh
gui/src/: web_server.cpp  websocket_server.cpp
gui/test/: CMakeLists.txt  sigint_loop.cpp  sigint_loop_sigaction.cpp  sigint_test.sh  sigint_thread.cpp  sigint_thread_sigaction.cpp  web_server.cpp  websocket_server.cpp
include/arbitration_graphs/: arbitrator.hpp  behavior.hpp  cost_arbitrator.hpp  exceptions.hpp  joint_coordinator.hpp  priority_arbitrator.hpp  python_bindings.hpp  random_arbitrator.hpp  verification.hpp
include/arbitration_graphs/gui/: websocket_server.hpp
include/arbitration_graphs/internal/: arbitrator_impl.hpp  arbitrator_io.hpp  arbitrator_py.hpp  behavior_io.hpp  behavior_py.hpp  conjunctive_coordinator_io.hpp  conjunctive_coordinator_py.hpp  exceptions_py.hpp  (+9 more)
include/behavior_planning/: arbitrator.hpp  behavior.hpp  cache.hpp  conjunctive_coordinator.hpp  cost_arbitrator.hpp  exceptions.hpp  joint_coordinator.hpp  priority_arbitrator.hpp  types.hpp  verification.hpp
python/: test.py
python_api/: arbitration_graphs_py.cpp
python_bindings/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
python_bindings/include/arbitration_graphs_py/: arbitrator.hpp  behavior.hpp  command_wrapper.hpp  cost_arbitrator.hpp  environment_model_wrapper.hpp  exceptions.hpp  priority_arbitrator.hpp  random_arbitrator.hpp  verification_wrapper.hpp  verifier.hpp  yaml_helper.hpp
python_bindings/scripts/: cibuildhweel.sh  cibuildwheel.sh
python_bindings/src/: bindings.cpp
python_bindings/src/arbitration_graphs/: __init__.py  __init__.pyi
python_bindings/src/arbitration_graphs/typing/: __init__.py
python_bindings/src/arbitration_graphs/verification/: __init__.py  __init__.pyi
python_bindings/test/: cost_estimator.py  dummy_types.py  priority_arbitrator.py  test_cost_arbitrator.py  test_dummy_behavior.py  test_exceptions.py  test_nested_arbitrators.py  test_priority_arbitrator.py  test_random_arbitrator.py  test_verification.py
test/: CMakeLists.txt  behavior_planning.cpp  cache.cpp  conjunctive_coordinator.cpp  conjunctive_coordinator.py  conjunctive_coordinator_with_subcommand.py  cost_arbitrator.cpp  cost_arbitrator.py  cost_arbitrator_test.py  cost_arbitrator_with_subcommand.py  cost_estimator.hpp  cost_estimator.py  dummy_behavior.cpp  dummy_behavior.py  dummy_types.hpp  dummy_types.py  handle_exceptions.cpp  joint_coordinator.cpp  joint_coordinator_test.py  nested_arbitrators.cpp  nested_arbitrators.py  nested_arbitrators_test.py  priority_arbitrator.cpp  priority_arbitrator.py  priority_arbitrator_with_subcommand.py  python_bindings.cpp  random_arbitrator.cpp  random_arbitrator_test.py  sub_command_differs_from_command.py  sub_command_differs_from_command_test.py  verification.cpp  verification.py  websocket_server.cpp
todo/: nested_arbitrators.cpp  priority_arbitrator.cpp  verification.cpp
(+9 files in other folders)
