<?xml version="1.0"?>
<package format="2">
  <name>behavior_planning</name>
  <version>0.0.0</version>
  <description>behavior planning based on simple atomic behaviors that are combined to more complex behaviors using arbitrators</description>

  <license>MRT</license>
  <maintainer email="christoph.burger@kit.edu">burger</maintainer>
  <author email="christoph.burger@kit.edu">burger</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/MRT/private/burger/behavior_planning</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
