<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>arbitration_graphs</name>
  <version>0.0.0</version>
  <description>combine simple atomic behaviors into a more complex arbitration graph for behavior planning</description>

  <license>MRT</license>
  <maintainer email="nick.lelarge@kit.edu">Nick Le Large</maintainer>
  <author email="christoph.burger@kit.edu">burger</author>
  <url type="repository">https://gitlab.mrt.kit.edu/MRT/private/lelarge/arbitration_graphs/arbitration_graphs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->
  <depend>boost</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>yaml-cpp</depend>

  <depend>util_caching</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>