<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>arbitration_graphs</name>
  <version>0.0.0</version>
  <description>Arbitration graphs combine simple atomic behavior blocks to more complex behaviors for decision making and behavior generation</description>

  <license>MRT</license>
  <maintainer email="orzechow@posteo.de">Piotr Spieker</maintainer>
  <maintainer email="burger.christop89@gmail.com">Christoph Burger</maintainer>
  <maintainer email="nick.lelarge@kit.edu">Nick Le Large</maintainer>
  <author email="orzechow@posteo.de">Piotr Spieker</author>
  <author email="burger.christop89@gmail.com">Christoph Burger</author>
  <url type="repository">https://gitlab.mrt.kit.edu/MRT/private/lelarge/arbitration_graphs/arbitration_graphs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>libgoogle-glog-dev</depend>
  <depend>yaml-cpp</depend>

  <depend>util_caching</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>