[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "arbitration_graphs"
description="Python bindings for the arbitration graphs library"
readme = "../README.md"
license = { text = "MIT" }
authors = [
]
dynamic = ["version"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "version"
regex = '^VERSION=v(?P<value>.+)$'

