[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "arbitration_graphs"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
  { name = "Christoph Burger" },
  { name = "Piotr Spieker" },
  { name = "Nick Le Large" },
]
maintainers = [
  { name = "Piotr Spieker" },
  { name = "Nick Le Large" },
]
description="Hierarchical behavior models for complex decision-making and behavior generation in robotics"
readme = ".README.md"
license = { text = "MIT" }
keywords = ["robotics", "decision-making", "behavior generation", "hierarchical behavior models"]

[project.urls]
Homepage = "https://kit-mrt.github.io/arbitration_graphs/"
Repository = "https://github.com/KIT-MRT/arbitration_graphs"
Issues = "https://github.com/KIT-MRT/arbitration_graphs/issues"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "version"
regex = '^VERSION=v(?P<value>.+)$'

